--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libnvme (1.8-2deepin1) sid; urgency=medium
+
+  * No source change upload against python 3.12.
+
+ -- Tianyu Chen <sweetyfish@deepin.org>  Mon, 08 Jul 2024 09:51:25 +0200
+
 libnvme (1.8-2) sid; urgency=medium
 
   * Uploading to sid.
