--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libnvme (1.9-1deepin1) unstable; urgency=medium
+
+  * revert: for t64 transition.
+
+ -- LiChengGang <lichenggang@uniontech.com>  Wed, 17 Jul 2024 15:41:00 +0800
+
 libnvme (1.9-1) sid; urgency=medium
 
   * Uploading to sid.
